--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@angular/cdk": "^9.0.0",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
-    "@angular/core": "~9.0.1",
+    "@angular/core": "^9.0.1",
     "@angular/forms": "~9.0.1",
     "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser": "^9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "rxjs": "~6.5.4",
